Update 2. Genome assembly and scaffolding.md

--- a/2. Genome assembly and scaffolding.md
+++ b/2. Genome assembly and scaffolding.md
@@ -8,17 +8,18 @@
 
  #### Process
  
-1. We assembled the genome with 24 X (diploid) coverage with hifiasm. We ran hifiasm in diploid mode and incoporated HiC linked reads.
+1. We assembled the genome with hifiasm run in diploid mode and incoporating HiC linked reads.
    
 ```
 hifiasm -o $OUTDIR/SL.asm -t24 -l3 --h1 $WDIR/HiC/SL_R1.fastq.gz --h2 $WDIR/HiC/SL_R2.fastq.gz $WDIR/HiFi/SL.filt.ccs.fastq
 ```
 Statistics with seqkit stats -a -T
-file    format  type    num_seqs        sum_len min_len avg_len max_len Q1      Q2      Q3      sum_gap N50     Q20(%)  Q30(%)
-SL_v1_A.fa      FASTA   DNA     608     364360491       4085    599277.1        37387884        22945.5 28608.0 42364.0 0       17835380        0.00    0.00
-[ptob6302@hpc055 20230311_SL_assembly]$ cat SL_v1_B.stats
-file    format  type    num_seqs        sum_len min_len avg_len max_len Q1      Q2      Q3      sum_gap N50     Q20(%)  Q30(%)
-SL_v1_B.fa      FASTA   DNA     253     360444808       10893   1424683.0       33870144        31774.0 51528.0 159046.0        0       26430678        0.000.00
+
+| file       | format | type | num_seqs | sum_len  | min_len | avg_len  | max_len  | N50      |
+| ---------- | ------ | ---- | -------- | -------- | ------- | -------- | -------- | -------- |
+| SL_v1_A.fa | FASTA  | DNA  | 608      | 3.64E+08 | 4085    | 599277.1 | 37387884 | 17835380 |
+| SL_v1_B.fa | FASTA  | DNA  | 253      | 3.6E+08  | 10893   | 1424683  | 33870144 | 26430678 |
+
 
 2. We then scaffolded each haploid genome output independently using all the HiC reads with the Juicer and 3d-dna pipelines. Before beginnning we used the utility in 3d-dna to wrap the fasta. This improved run time in downstream scripts.
 
