--- a/3. Genome curation.md
+++ b/3. Genome curation.md
@@ -24,7 +24,7 @@ python $HOMEDIR/pafscaff/code/pafscaff.py seqin=$WDIR/${assembly} reference=$WDI
 2. We concatenated the scaffolded and unplaced fasta files for a complete set of contigs for each haplotyype.
 
 3. Next we ran telociraptor followed by chromsyn on just the chromosome level contigs to compare the synteny between Hap A and B.  Initially the synteny plots indicated some errors in scaffolding.
- ![Alt text](https://github.com/peritob/Theobroma-cacao-genome/blob/main/T_cacao_v1.0.png)
+ ![Alt text](https://github.com/peritob/Syzygium-luehmannii/blob/main/SL.png)
 
 4. Then the Hap A and B contigmaps (SL.ctgmap.txt) were manually adjusted to conform and telomeres were moved that were marked as { or } to 5' and 3'. Rerun telociraptor with adjust map in and synteny graphs rechecked with chromsyn.
 
@@ -33,7 +33,7 @@ python $HOMEDIR/telociraptor/code/telociraptor.py seqin=SL_B.chr.fa basefile=SL_
 ```
 
 After tweaking the synteny was improved.
-![Alt text](https://github.com/peritob/Theobroma-cacao-genome/blob/main/T_cacao_v1.1.png)
+![Alt text](https://github.com/peritob/Syzygium-luehmannii/blob/main/SL.tweak.png)
 
 
 9. We then ran the genomes through contamination screening using FCS-GX, taxolotl and tiara and removed contigs that were flagged as non-plant or plastid to retain only genomic DNA sequences
