Update 4. Annotating the genome.md

--- a/4. Annotating the genome.md
+++ b/4. Annotating the genome.md
@@ -1,1 +1,1 @@
-Illumina RNAseq data was available from previous work [https://doi.org/10.1094/PHYTO-09-17-0298-R](url) and is available at NCBI: PRJNA356336. This data was trimmed of adaptors and low quality reads using fastp in default mode.
+Illumina RNAseq data was available from previous work <https://doi.org/10.1094/PHYTO-09-17-0298-R> and is available at NCBI: PRJNA356336. The paired data was concatenated to make a single R1 and R2 fastq file, then trimmed of adaptors and low quality reads using fastp in default mode. 
