Update 3. Genome curation.md

--- a/3. Genome curation.md
+++ b/3. Genome curation.md
@@ -43,7 +43,8 @@ After tweaking the synteny was improved.
 11. We checked the conserved single copy gene complement of each haploid genome with BUSCO.
 
 ```
-C:98.2%[S:97.5%,D:0.7%],F:0.8%,M:1.0%,n:1614 - T_cacao_A_v1.3.fasta
-C:98.4%[S:97.8%,D:0.6%],F:0.9%,M:0.7%,n:1614 - T_cacao_B_v1.3.fasta
+C:98.4%[S:96.6%,D:1.8%],F:0.7%,M:0.9%,n:1614 - SL_A.v1.fasta
+C:98.6%[S:96.8%,D:1.8%],F:0.7%,M:0.7%,n:1614 - SL_B.v1.fasta
+
 ```
     
