Update 3. Genome curation.md

--- a/3. Genome curation.md
+++ b/3. Genome curation.md
@@ -36,15 +36,16 @@ After tweaking the synteny was improved.
 ![Alt text](https://github.com/peritob/Syzygium-luehmannii/blob/main/SL.tweak.png)
 
 
-9. We then ran the genomes through contamination screening using FCS-GX, taxolotl and tiara and removed contigs that were flagged as non-plant or plastid to retain only genomic DNA sequences
+9. We then ran the genomes through contamination screening using FCS-GX and taxolotl. We removed contigs that were flagged as non-plant or plastid to retain only genomic DNA sequences. The resulting principle and secondary pseudo-haplotype assemblies were labelled SL_A.v1.1.fasta and SL_B.v1.1.fasta.
 
-10. We attempted to build complete plastid genomes first using the assembled and flagged organelle contigs and then using all the filtered.ccs.fastq reads with mitohifi/3.0.0. This did not assemble a complete circularised mito or chloroplast genome. We speculate that this might be due to the HMW DNA extraction protocol that depletes cytosolic material as well as subsequent size selection for PacBio sequencing. 
+10. We attempted to build complete plastid genomes first using all the filtered.ccs.fastq reads with mitohifi/3.0.0. This did not assemble a complete circularised mito or chloroplast genome. We speculate that this might be due to the HMW DNA extraction protocol that depletes cytosolic material as well as subsequent size selection for PacBio sequencing. 
     
 11. We checked the conserved single copy gene complement of each haploid genome with BUSCO.
 
 ```
-C:98.4%[S:96.6%,D:1.8%],F:0.7%,M:0.9%,n:1614 - SL_A.v1.fasta
-C:98.6%[S:96.8%,D:1.8%],F:0.7%,M:0.7%,n:1614 - SL_B.v1.fasta
+C:98.4%[S:96.6%,D:1.8%],F:0.7%,M:0.9%,n:1614 - SL_A.v1.1.fasta
+
+C:98.6%[S:96.8%,D:1.8%],F:0.7%,M:0.7%,n:1614 - SL_B.v1.1.fasta
 
 ```
     
