Update 2. Genome assembly and scaffolding.md

--- a/2. Genome assembly and scaffolding.md
+++ b/2. Genome assembly and scaffolding.md
@@ -61,3 +61,4 @@ cd 3d-dna/
 ```
 ./run-asm-pipeline-post-review.sh --build-gapped-map --sort-output -r $wdir/3d-dna/${prefix_name}.review.assembly $wdir/references/$input_fasta $wdir/aligned/merged_nodups.txt
 ```
+![Alt text](https://github.com/peritob/Syzygium-luehmannii/blob/main/SL50_diploid_juicebox_heatmap.jpg)
